# mattress-metropolis

./: .clang-format  .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/energy_tests/src/: tests_energy.cpp
app/extensions/: CMakeLists.txt
app/extensions/include/extensions/: range_streamer.hpp
app/extensions_tests/src/: range_streamer_test.cpp
app/metropolis/: CMakeLists.txt
app/metropolis/include/metropolis/: energy_getter_type.hpp  enum_energy_getter_type.hpp  interpret_energy_getter_type_string.hpp  interpret_model_type_string.hpp  interpret_number_string.hpp  interpret_steps_string.hpp  interpreted_program_options.hpp  model_type.hpp  nm.hpp.in  raw_program_options.hpp
app/metropolis/src/: interpret_energy_getter_type_string.cpp  interpret_model_type_string.cpp  interpret_number_string.cpp  interpret_steps_string.cpp  interpreted_program_options.cpp  main.cpp  raw_program_options.cpp
app/metropolis_engine/: CMakeLists.txt
app/numboard/: CMakeLists.txt
app/numboard_tests/src/: tests_numboard.cpp
energy/: CMakeLists.txt
energy/include/energy/: energy_getter_ising_doublet.hpp  energy_getter_ising_multiplet.hpp
energy_tests/src/: tests_energy.cpp
extensions/: CMakeLists.txt
extensions/include/extensions/: stream_fromat_stacker.hpp
metropolis/: CMakeLists.txt
metropolis/include/metropolis/: interpret_steps_string.hpp  interpreted_program_options.hpp  program_options.hpp  raw_program_options.hpp
metropolis/src/: main.cpp  program_options.cpp  raw_program_options.cpp
numboard/: CMakeLists.txt
numboard_tests/src/: print.cpp  tests_energy.cpp  tests_numboard.cpp
post/: plot_results.py  requirements.txt
post/utility/: get_value_if_prefix_matches.py
(+14 files in other folders)
